--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.28.9",
     "@tanstack/react-router": "^1.24.0",
     "@tanstack/router-devtools": "^1.24.0",
     "class-variance-authority": "^0.7.0",
@@ -26,6 +27,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.6",
     "@tanstack/router-vite-plugin": "^1.24.1",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
