--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.4.5"
-  },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
+    "dotenv": "^16.4.5",
     "typescript": "^5.2.2"
   }
 }
