--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@libsql/client": "^0.6.0",
+    "@libsql/linux-x64-gnu": "^0.3.10",
+    "drizzle-orm": "^0.30.6",
     "hono": "^4.1.5"
   }
 }
