Update posts queries and components, and configure API routes

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,7 +7,9 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@core/*": ["../core/src/*"],
+      "@functions/*": ["../functions/src/*"]
     },
 
     /* Bundler mode */
