--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@libsql/client": "^0.6.0",
-    "drizzle-orm": "^0.30.6"
+    "drizzle-orm": "^0.30.6",
+    "hono": "^4.1.5"
   },
   "devDependencies": {
     "drizzle-kit": "^0.20.14"
