--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -26,6 +26,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/client.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
