--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev:db": "turso dev --db-file dev.db",
     "db:migrate": "drizzle-kit generate:sqlite",
-    "db:push": "drizzle-kit push:sqlite"
+    "db:push": "drizzle-kit push:sqlite",
+    "studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
