--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@tsconfig/node18": "^18.2.4",
     "dotenv": "^16.4.5",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "sst": "^3.0.2"
   }
 }
