--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.540.0",
+    "@aws-sdk/s3-request-presigner": "^3.540.0",
     "@hono/zod-validator": "^0.2.1",
     "@libsql/client": "^0.6.0",
     "@libsql/linux-x64-gnu": "^0.3.10",
