--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.4",
-    "dotenv": "^16.4.5",
-    "typescript": "^5.2.2"
+    "dotenv": "^16.4.5"
   },
   "dependencies": {
     "sst": "^3.0.2"
