--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@core/*": ["../core/src/*"],
-      "@functions/*": ["../functions/src/*"]
+      "@core/*": ["./aws/core/src/*"],
+      "@functions/*": ["./aws/functions/src/*"]
     },
 
     /* Bundler mode */
@@ -28,6 +28,7 @@
   },
   "include": [
     "src",
+    "aws",
     "src/client.ts",
     "src/queries/post.QueryOptions.ts",
     "src/queries/posts.QueryOptions.ts",
