--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@core/*": ["./aws/core/src/*"],
-      "@functions/*": ["./aws/functions/src/*"]
+      "@/*": ["./src/*"]
     },
 
     /* Bundler mode */
@@ -28,11 +26,11 @@
   },
   "include": [
     "src",
-    "aws",
     "src/client.ts",
     "src/queries/post.QueryOptions.ts",
     "src/queries/posts.QueryOptions.ts",
-    "src/queries/posts.ts"
+    "src/queries/posts.ts",
+    "drizzle.config.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
