--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "db:migrate": "drizzle-kit generate:sqlite",
     "db:push": "drizzle-kit push:sqlite",
     "studio": "drizzle-kit studio"
-
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
@@ -36,6 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "sst": "^3.0.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
