--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# dependencies
 node_modules
-dist
-dist-ssr
-*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-#sst
+# sst
 .sst
+.build
 
-# Local development
-*.db*
+# opennext
+.open-next
+
+# misc
+.DS_Store
+
+# local env files
+.env*.local
