--- a/package.json
+++ b/package.json
@@ -1,67 +1,24 @@
 {
-  "name": "snapshare-web",
-  "private": true,
+  "name": "snapshare",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "dev:db": "turso dev --db-file dev.db",
-    "db:migrate": "drizzle-kit generate:sqlite",
-    "db:push": "drizzle-kit push:sqlite",
-    "studio": "drizzle-kit studio"
-  },
-  "dependencies": {
-    "@hono/zod-validator": "^0.2.1",
-    "@hookform/resolvers": "^3.3.4",
-    "@kinde-oss/kinde-auth-react": "^3.0.28",
-    "@libsql/client": "^0.6.0",
-    "@libsql/linux-x64-gnu": "^0.3.10",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.28.9",
-    "@tanstack/react-query-devtools": "^5.28.10",
-    "@tanstack/react-router": "^1.24.0",
-    "@tanstack/router-devtools": "^1.24.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "drizzle-orm": "^0.30.6",
-    "hono": "^4.1.5",
-    "lucide-react": "^0.363.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2",
-    "sst": "^3.0.2",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "dev": "sst dev",
+    "build": "sst build",
+    "deploy": "sst deploy",
+    "remove": "sst remove",
+    "console": "sst console",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.540.0",
-    "@aws-sdk/s3-request-presigner": "^3.540.0",
-    "@tanstack/eslint-plugin-query": "^5.28.6",
-    "@tanstack/router-vite-plugin": "^1.24.1",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+    "sst": "^2.41.4",
+    "aws-cdk-lib": "2.132.1",
+    "constructs": "10.3.0",
+    "typescript": "^5.4.3",
+    "@tsconfig/node18": "^18.2.4"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
