--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,9 +7,17 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.12.2",
+    "@aws-sdk/client-s3": "^3.540.0",
+    "@aws-sdk/s3-request-presigner": "^3.540.0",
     "@types/aws-lambda": "^8.10.136",
-    "vitest": "^1.4.0",
-    "sst": "^2.41.4"
+    "@types/node": "^20.12.2",
+    "sst": "^2.41.4",
+    "vitest": "^1.4.0"
+  },
+  "dependencies": {
+    "@hono/zod-validator": "^0.2.1",
+    "drizzle-orm": "^0.30.6",
+    "hono": "^4.1.7",
+    "zod": "^3.22.4"
   }
 }
