--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,11 +7,16 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^1.4.0",
     "@types/node": "^20.12.2",
-    "sst": "^2.41.4"
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.14",
+    "sst": "^2.41.4",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
+    "@libsql/client": "^0.6.0",
+    "drizzle-orm": "^0.30.6",
+    "hono": "^4.1.7",
     "zod": "^3.22.4"
   }
 }
