--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.41.4",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/node": "^20.12.2",
     "aws-cdk-lib": "2.132.1",
     "constructs": "10.3.0",
-    "typescript": "^5.4.3",
-    "@tsconfig/node18": "^18.2.4"
+    "dotenv": "^16.4.5",
+    "sst": "^2.41.4",
+    "typescript": "^5.4.3"
   },
   "workspaces": [
     "packages/*"
