--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
+    "@libsql/linux-x64-gnu": "^0.3.10",
     "drizzle-orm": "^0.30.6",
     "hono": "^4.1.7",
     "zod": "^3.22.4"
