--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,7 +7,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@core/*": ["../core/src/*"]
     },
 
     /* Bundler mode */
