--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
     "typecheck": "tsc -noEmit",
     "db": "turso dev --db-file dev.db",
     "db:migrate": "drizzle-kit generate:sqlite",
-    "db:push": "drizzle-kit push:sqlite",
+    "db:push": "tsx src/migrate.ts",
     "studio": "drizzle-kit studio"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
     "sst": "^2.41.4",
+    "tsx": "^4.7.1",
     "vitest": "^1.4.0"
   },
   "dependencies": {
