--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.6.0",
+    "@libsql/linux-x64-gnu": "^0.3.10",
     "drizzle-orm": "^0.30.6",
     "hono": "^4.1.7",
     "zod": "^3.22.4"
